# mail-agent

./: .env.example  .gitignore  Dockerfile  ISSUES.md  README.md  docker-compose.yml  main.py  main1.py  pyproject.toml  skills_loader.py
app/: __init__.py  agents.py  api.py  attachments.py  config.py  database.py  email_queue.py  orchestrator.py  requirements.py  schemas.py  security.py  utils.py
mail_agent/: database.py  main.py  model_factory.py  models.py  orchestrator.py  schemas.py  utils.py
mail_agent/agents/: __init__.py  _base.py  email_parser.py  reply_composer.py  triage.py
mail_agent/routes/: __init__.py  applicants.py  misc.py  requirements.py  webhook.py
skills/: application-triage.md  attachment-handler.md  email-parser.md  hr-reply-composer.md  requirement-manager.md
static/: dashboard.html
