[project]
name = "mail-agent1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentmail>=0.4.15",
    "agno>=2.5.16",
    "bindu>=2026.3.5",
    "fastapi>=0.135.3",
    "openai>=2.31.0",
    "psycopg2-binary>=2.9.11",
    "pypdf2>=3.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "x402<0.4",
]
