[project]
name = "mail-agent1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agentmail>=0.4.15",
    "agno>=2.5.16",
    "bindu>=2026.12.5",
    "fastapi>=0.135.3",
    "hindsight-agno>=0.4.19",
    "langfuse>=4.5.1",
    "nest-asyncio>=1.6.0",
    "openai>=2.31.0",
    "openinference-instrumentation-agno>=0.1.31",
    "opentelemetry-exporter-otlp>=1.35.0",
    "opentelemetry-sdk>=1.35.0",
    "psycopg2-binary>=2.9.11",
    "pypdf2>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.44.0",
    "x402<0.4",
]


